javadoc: add -XX:+PrintGCApplicationStoppedTime to recommended command line options